--- a/etc/salt/master.d/reactors.conf
+++ b/etc/salt/master.d/reactors.conf
@@ -1,3 +1,5 @@
+# /etc/salt/master.d/reactors.conf
+
 reactor:
   - salt/beacon/*/inotify//etc/apache2/apache2.conf:
     - /srv/salt/reactors/call_manage_apache.sls
